Fix Note settings being clipped by explicitly-set height

--- a/styles/widgets/_widget.scss
+++ b/styles/widgets/_widget.scss
@@ -14,7 +14,7 @@
     color: inherit;
   }
   // Ensure that widget settings are never clipped by a manually-set height
-  &.widget-settings-open {
+  &.widget-settings-open .widget-contents {
     resize: none !important;
     height: auto !important;
   }
